--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> -->
 </head>
 <body>
   <app-root></app-root>
+  <!-- <script src="http://www.atlasestateagents.co.uk/javascript/tether.min.js"></script> -->
 </body>
 </html>
